<resources>
    <string name="app_name">Receipt Keeper</string>
    <string name="nav_title_monthly">Monthly</string>
    <string name="nav_title_yearly">Yearly</string>
    <string name="nav_title_statistics">Statistics</string>
    <string name="nav_title_setting">Settings</string>
    <string name="nav_title_search">Search</string>
    <string name="nav_title_daily">Daily</string>
    <string name="nav_title_help">Help and feedback</string>
    <string name="string_price_yen">¥ %1$s</string>
    <string name="string_price_dollar_format">$ %1$s</string>
    <string name="tax_format">%1$d\%%</string>
    <string name="hint_date">Date</string>
    <string name="hint_price">Price</string>
    <string name="hint_category">Category</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_shop_name">Shop name</string>
    <string name="hint_time">Time</string>
    <string name="icon_for_shop">Icon for shop</string>
    <string name="icon_for_tax_operation">Icon for tax operation</string>
    <string name="icon_for_date">Icon for date</string>
    <string name="text_button_edit">edit</string>
</resources>
