<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.github.hamatoshi.receiptkeeper.ui.input.InputViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_receipt_summary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_large"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.input.InputFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_date_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/layout_time_input"
            app:layout_constraintTop_toTopOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_time_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            app:layout_constraintTop_toTopOf="@id/layout_date_input"
            app:layout_constraintStart_toEndOf="@+id/layout_date_input"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hint_time">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_shop_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            app:layout_constraintTop_toBottomOf="@id/layout_date_input"
            app:layout_constraintStart_toStartOf="@id/layout_date_input"
            app:endIconMode="clear_text"
            android:hint="@string/hint_shop_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_taxed_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:textSize="12sp"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/layout_shop_input"
            app:layout_constraintStart_toStartOf="@+id/layout_date_input"
            android:text="Taxed on" />
        <RadioGroup
            android:id="@+id/radio_tax_operation"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/layout_date_input"
            app:layout_constraintTop_toBottomOf="@id/text_taxed_on">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Total" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:text="Each" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/container_receipt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/radio_tax_operation"
            android:orientation="vertical">
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>